# qbdi-trace

./: README.md  settings.gradle  trace.js
app/: build.gradle
app/src/androidTest/java/com/fei3ei/qbditrace/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
qbditrace/: build.gradle
qbditrace/src/androidTest/java/com/fei3ei/qbditrace/: ExampleInstrumentedTest.java
qbditrace/src/main/cpp/: CMakeLists.txt
qbditrace/src/main/cpp/include/: dealSyscall.h  logManager.h  parseExternalCall.h  parseSymbol.h  vm.h
qbditrace/src/main/cpp/include/LIEF/: version.h
qbditrace/src/main/cpp/include/utils/: crc32.h  hexdump.h  log.h
qbditrace/src/main/cpp/source/: dealSyscall.cpp  parseExternalCall.cpp  parseSymbol.cpp  start_hook.cpp  vm.cpp
qbditrace/src/main/cpp/source/utils/: crc32.cpp  log.cpp
qbditrace/src/main/java/com/fei3ei/qbditrace/: NativeLib.java
qbditrace/src/test/java/com/fei3ei/qbditrace/: ExampleUnitTest.java
